--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,8 @@
 button {
   font-size: calc(10px + 2vmin);
 }
+
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
